--- a/admin/themes/roma/css/components/general.css
+++ b/admin/themes/roma/css/components/general.css
@@ -194,11 +194,11 @@ or (generated by selectize.js)
 }
 
 .info-message {
-  background-color:  #50a48f;
-  color: #a9f6e3;
+  background-color:  #4EA590;
+  color: #AAF6E4;
 }
 
 .info-warning {
-  background-color: #ee8800;
-  color:#ffdd99;
+  background-color: #D68042;
+  color: #FFDCC2;
 }
